syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.ozkanpakdil.grepwise.grpc";
option java_outer_classname = "LogServiceProto";

package logservice;

// Service for handling log operations
service LogService {
  // Stream logs to the server
  rpc StreamLogs(stream LogEntry) returns (LogResponse);
  
  // Search logs with a query
  rpc SearchLogs(SearchRequest) returns (SearchResponse);
  
  // Get a specific log entry by ID
  rpc GetLogById(LogIdRequest) returns (LogEntry);
  
  // Delete logs by query
  rpc DeleteLogs(DeleteRequest) returns (DeleteResponse);
}

// A log entry
message LogEntry {
  string id = 1;
  int64 timestamp = 2;
  string level = 3;
  string message = 4;
  string source = 5;
  map<string, string> metadata = 6;
  string raw_content = 7;
}

// Request to search logs
message SearchRequest {
  string query = 1;
  int32 page = 2;
  int32 size = 3;
  string sort_field = 4;
  bool sort_ascending = 5;
  int64 start_time = 6;
  int64 end_time = 7;
}

// Response from a search
message SearchResponse {
  repeated LogEntry logs = 1;
  int32 total_pages = 2;
  int32 current_page = 3;
  int64 total_results = 4;
}

// Request to get a log by ID
message LogIdRequest {
  string id = 1;
}

// Response after streaming logs
message LogResponse {
  int32 processed_count = 1;
  bool success = 2;
  string message = 3;
}

// Request to delete logs
message DeleteRequest {
  string query = 1;
  int64 start_time = 2;
  int64 end_time = 3;
}

// Response after deleting logs
message DeleteResponse {
  int32 deleted_count = 1;
  bool success = 2;
  string message = 3;
}